--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,51 @@
-<p>
-  login works!
-</p>
+<div
+  class="min-h-screen flex items-center justify-center flex-col bg-blue-500 px-4"
+>
+  <div class="justify-center items-center flex flex-col mb-6">
+    <img
+      src="brand_white.png"
+      alt="Crypto Dashboard"
+      height="5rem"
+      width="100rem"
+    />
+    <h1 class="text-2xl font-bold text-center text-white mb-6">
+      Crypto Dashboard
+    </h1>
+  </div>
+  <div class="w-full max-w-md bg-white shadow-md rounded-lg p-6">
+    <form>
+      <div class="mb-4">
+        <label for="email" class="block text-sm font-medium text-gray-700"
+          >Email</label
+        >
+        <input
+          type="email"
+          id="email"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+          placeholder="Enter your email"
+        />
+      </div>
+      <div class="mb-6">
+        <label for="password" class="block text-sm font-medium text-gray-700"
+          >Password</label
+        >
+        <input
+          type="password"
+          id="password"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+          placeholder="Enter your password"
+        />
+      </div>
+      <button
+        type="submit"
+        class="w-full bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
+      >
+        Login
+      </button>
+    </form>
+    <p class="mt-4 text-center text-sm text-gray-600">
+      Don't have an account?
+      <a href="#" class="text-blue-500 hover:underline">Sign up</a>
+    </p>
+  </div>
+</div>
