--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,7 @@
         <input
           type="email"
           id="email"
-          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 placeholder:text-gray-500"
           placeholder="Enter your email"
         />
       </div>
@@ -32,7 +32,7 @@
         <input
           type="password"
           id="password"
-          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 placeholder:text-gray-500"
           placeholder="Enter your password"
         />
       </div>
