--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,17 +14,6 @@
   </div>
   <div class="w-full max-w-md bg-white shadow-md rounded-lg p-6">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="mb-4">
-        <label for="email" class="block text-sm font-medium text-gray-700"
-          >Email</label
-        >
-        <input
-          type="email"
-          id="email"
-          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 placeholder:text-gray-500"
-          placeholder="Enter your email"
-        />
-      </div>
       <div class="mb-6">
         <label for="password" class="block text-sm font-medium text-gray-700"
           >Password</label
@@ -32,6 +21,7 @@
         <input
           type="password"
           id="password"
+          formControlName="password"
           class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 placeholder:text-gray-500"
           placeholder="Enter your password"
         />
@@ -43,9 +33,5 @@
         Login
       </button>
     </form>
-    <p class="mt-4 text-center text-sm text-gray-600">
-      Don't have an account?
-      <a href="#" class="text-blue-500 hover:underline">Sign up</a>
-    </p>
   </div>
 </div>
