--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -36,8 +36,7 @@
         </th>
         <th
           scope="col"
-          class="text-left"
-          class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider"
+          class="text-left px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider"
         >
           Symbol
         </th>
@@ -45,7 +44,7 @@
     </thead>
     <tbody class="bg-white divide-y divide-gray-200">
       @for (coin of cryptoData$ |async; track $index) {
-      <tr class="hover:bg-gray-100">
+      <tr class="hover:bg-gray-100" (click)="goToCoinDetails(coin.id)">
         <td class="px-6 py-4 whitespace-nowrap">{{ coin.name }}</td>
         <td class="px-6 py-4 whitespace-nowrap">{{ coin.current_price }}</td>
         <td class="px-6 py-4 whitespace-nowrap">{{ coin.price_change_24h }}</td>
