feat: add Prettier configuration and integrate it into the project; enhance coin detail view with detailed stats and sparkline chart

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -4,7 +4,9 @@
   color: white;
   font-weight: bold;
   border-radius: 8px;
-  animation: pulse 1s, fadeOut 2s forwards;
+  animation:
+    pulse 1s,
+    fadeOut 2s forwards;
 }
 
 @keyframes pulse {
