--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 <div class="overflow-x-auto">
   <table class="min-w-full divide-y divide-gray-200">
     <thead class="bg-gray-50">
@@ -49,18 +47,23 @@
       </tr>
     </thead>
     <tbody class="bg-white divide-y divide-gray-200">
-      @for (coin of cryptoData$ |async; track $index) {
-      <tr class="hover:bg-gray-100" (click)="goToCoinDetails(coin.id)">
-        <td class="px-6 py-4 whitespace-nowrap">{{ coin.name }}</td>
-        <td class="px-6 py-4 whitespace-nowrap">{{ coin.current_price }}</td>
-        <td class="px-6 py-4 whitespace-nowrap">{{ coin.price_change_24h }}</td>
-        <td class="px-6 py-4 whitespace-nowrap">{{ coin.symbol }}</td>
-        <td class="px-6 py-4 whitespace-nowrap">
-          <app-sparkline-chart
-            [sparklineData]="coin.sparkline_in_7d.price"
-          ></app-sparkline-chart>
-        </td>
-      </tr>
+      @for (coin of cryptoData$ | async; track $index) {
+        <tr
+          class="hover:bg-gray-100 cursor-pointer"
+          (click)="goToCoinDetails(coin)"
+        >
+          <td class="px-6 py-4 whitespace-nowrap">{{ coin.name }}</td>
+          <td class="px-6 py-4 whitespace-nowrap">{{ coin.current_price }}</td>
+          <td class="px-6 py-4 whitespace-nowrap">
+            {{ coin.price_change_24h }}
+          </td>
+          <td class="px-6 py-4 whitespace-nowrap">{{ coin.symbol }}</td>
+          <td class="px-6 py-4 whitespace-nowrap">
+            <app-sparkline-chart
+              [sparklineData]="coin.sparkline_in_7d.price"
+            ></app-sparkline-chart>
+          </td>
+        </tr>
       }
     </tbody>
   </table>
