--- a/src/app/dashboard/sparkline-chart/sparkline-chart.component.html
+++ b/src/app/dashboard/sparkline-chart/sparkline-chart.component.html
@@ -1,11 +1,12 @@
 <apx-chart
   [series]="chartOptions.series!"
-  [chart]="{ type: 'line',
-        width: 100,
-        height: 35,
-        sparkline: {
-          enabled: true,
-        },
+  [chart]="{
+    type: 'line',
+    width: 100,
+    height: 35,
+    sparkline: {
+      enabled: true,
+    },
   }"
   [tooltip]="chartOptions.tooltip!"
 ></apx-chart>
