--- a/src/app/coin-detail/coin-detail/coin-detail.component.html
+++ b/src/app/coin-detail/coin-detail/coin-detail.component.html
@@ -25,27 +25,33 @@
           <div class="p-4 bg-gray-100 rounded-lg">
             <p class="text-sm text-gray-500">Current Price</p>
             <p class="text-lg font-semibold">
-              {{ coin.current_price | currency }}
+              {{ coin.current_price | currency: "USD" : "symbol" : "1.2-10" }}
             </p>
           </div>
           <div class="p-4 bg-gray-100 rounded-lg">
             <p class="text-sm text-gray-500">Market Cap</p>
             <p class="text-lg font-semibold">
-              {{ coin.market_cap | currency }}
+              {{ coin.market_cap | currency: "USD" : "symbol" : "1.2-10" }}
             </p>
           </div>
           <div class="p-4 bg-gray-100 rounded-lg">
             <p class="text-sm text-gray-500">24h High</p>
-            <p class="text-lg font-semibold">{{ coin.high_24h | currency }}</p>
+            <p class="text-lg font-semibold">
+              {{ coin.high_24h | currency: "USD" : "symbol" : "1.2-10" }}
+            </p>
           </div>
           <div class="p-4 bg-gray-100 rounded-lg">
             <p class="text-sm text-gray-500">24h Low</p>
-            <p class="text-lg font-semibold">{{ coin.low_24h | currency }}</p>
+            <p class="text-lg font-semibold">
+              {{ coin.low_24h | currency: "USD" : "symbol" : "1.2-10" }}
+            </p>
           </div>
           <div class="p-4 bg-gray-100 rounded-lg">
             <p class="text-sm text-gray-500">Price Change (24h)</p>
             <p class="text-lg font-semibold">
-              {{ coin.price_change_percentage_24h | percent }}
+              {{
+                coin.price_change_24h | currency: "USD" : "symbol" : "1.2-10"
+              }}
             </p>
           </div>
           <div class="p-4 bg-gray-100 rounded-lg">
