--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -15,6 +15,18 @@
   <div class="w-full max-w-md bg-white shadow-md rounded-lg p-6">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mb-6">
+        <label for="email" class="block text-sm font-medium text-gray-700"
+          >Email</label
+        >
+        <input
+          type="email"
+          id="email"
+          formControlName="email"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 placeholder:text-gray-500"
+          placeholder="Enter your Email"
+        />
+      </div>
+      <div class="mb-6">
         <label for="password" class="block text-sm font-medium text-gray-700"
           >Password</label
         >
@@ -33,5 +45,10 @@
         Login
       </button>
     </form>
+    @if (loginFailed) {
+      <div class="mt-4 text-red-500 text-sm font-medium text-center">
+        Invalid email or password. Please try again.
+      </div>
+    }
   </div>
 </div>
