--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -53,9 +53,17 @@
           (click)="goToCoinDetails(coin)"
         >
           <td class="px-6 py-4 whitespace-nowrap">{{ coin.name }}</td>
-          <td class="px-6 py-4 whitespace-nowrap">{{ coin.current_price }}</td>
           <td class="px-6 py-4 whitespace-nowrap">
-            {{ coin.price_change_24h }}
+            {{ coin.current_price | currency }}
+          </td>
+          <td
+            class="px-6 py-4 whitespace-nowrap"
+            [ngClass]="{
+              'text-red-500': coin.price_change_24h < 0,
+              'text-green-500': coin.price_change_24h >= 0,
+            }"
+          >
+            {{ coin.price_change_24h | currency }}
           </td>
           <td class="px-6 py-4 whitespace-nowrap">{{ coin.symbol }}</td>
           <td class="px-6 py-4 whitespace-nowrap">
