--- a/src/app/coin-detail/coin-detail/coin-detail.component.html
+++ b/src/app/coin-detail/coin-detail/coin-detail.component.html
@@ -1,77 +1,86 @@
 @if (cryptoApiService.selectedCoin$ | async; as coin) {
-  @if (coinMetadata$ | async; as metadata) {
-    <div class="container mx-auto p-4">
-      <div class="bg-white shadow-md rounded-lg p-6">
-        <!-- Coin Header -->
-        <div class="flex items-center space-x-4">
-          <div class="flex gap-2 items-center">
-            <img
-              [src]="metadata.image.large"
-              alt="{{ coin.name }}"
-              class="w-16 h-16 rounded-full"
-            />
-            <div>
-              <h1 class="text-2xl font-bold">
-                {{ coin.name }} ({{ coin.symbol.toUpperCase() }})
-              </h1>
-              <p class="text-gray-500">
-                #{{ coin.market_cap_rank }} Market Cap Rank
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-6">
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <p class="text-sm text-gray-500">Current Price</p>
-            <p class="text-lg font-semibold">
-              {{ coin.current_price | currency: "USD" : "symbol" : "1.2-10" }}
+  <div class="container mx-auto p-4">
+    <div class="bg-white shadow-md rounded-lg p-6">
+      <div class="flex items-center space-x-4">
+        <div class="flex gap-2 items-center">
+          <img
+            [src]="coin.image.large"
+            alt="{{ coin.name }}"
+            class="w-16 h-16 rounded-full"
+          />
+          <div>
+            <h1 class="text-2xl font-bold">
+              {{ coin.name }} ({{ coin.symbol.toUpperCase() }})
+            </h1>
+            <p class="text-gray-500">
+              #{{ coin.market_cap_rank }} Market Cap Rank
             </p>
-          </div>
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <p class="text-sm text-gray-500">Market Cap</p>
-            <p class="text-lg font-semibold">
-              {{ coin.market_cap | currency: "USD" : "symbol" : "1.2-10" }}
-            </p>
-          </div>
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <p class="text-sm text-gray-500">24h High</p>
-            <p class="text-lg font-semibold">
-              {{ coin.high_24h | currency: "USD" : "symbol" : "1.2-10" }}
-            </p>
-          </div>
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <p class="text-sm text-gray-500">24h Low</p>
-            <p class="text-lg font-semibold">
-              {{ coin.low_24h | currency: "USD" : "symbol" : "1.2-10" }}
-            </p>
-          </div>
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <p class="text-sm text-gray-500">Price Change (24h)</p>
-            <p class="text-lg font-semibold">
-              {{
-                coin.price_change_24h | currency: "USD" : "symbol" : "1.2-10"
-              }}
-            </p>
-          </div>
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <p class="text-sm text-gray-500">Circulating Supply</p>
-            <p class="text-lg font-semibold">
-              {{ coin.circulating_supply }} {{ coin.symbol.toUpperCase() }}
-            </p>
-          </div>
-        </div>
-
-        <!-- Sparkline -->
-        <div class="mt-6">
-          <h2 class="text-lg font-bold mb-2">7-Day Price Trend</h2>
-          <div class="bg-gray-100 rounded-lg p-4">
-            <app-line-chart
-              [sparklineData]="coin.sparkline_in_7d.price"
-            ></app-line-chart>
           </div>
         </div>
       </div>
+
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-6">
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <p class="text-sm text-gray-500">Current Price</p>
+          <p class="text-lg font-semibold">
+            {{
+              coin.market_data.current_price["usd"]
+                | currency: "USD" : "symbol" : "1.2-10"
+            }}
+          </p>
+        </div>
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <p class="text-sm text-gray-500">Market Cap</p>
+          <p class="text-lg font-semibold">
+            {{
+              coin.market_data.market_cap["usd"]
+                | currency: "USD" : "symbol" : "1.2-10"
+            }}
+          </p>
+        </div>
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <p class="text-sm text-gray-500">24h High</p>
+          <p class="text-lg font-semibold">
+            {{
+              coin.market_data.high_24h["usd"]
+                | currency: "USD" : "symbol" : "1.2-10"
+            }}
+          </p>
+        </div>
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <p class="text-sm text-gray-500">24h Low</p>
+          <p class="text-lg font-semibold">
+            {{
+              coin.market_data.low_24h["usd"]
+                | currency: "USD" : "symbol" : "1.2-10"
+            }}
+          </p>
+        </div>
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <p class="text-sm text-gray-500">Price Change (24h)</p>
+          <p class="text-lg font-semibold">
+            {{
+              coin.market_data.price_change_percentage_24h_in_currency["usd"]
+                | currency: "USD" : "symbol" : "1.2-10"
+            }}
+          </p>
+        </div>
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <p class="text-sm text-gray-500">Circulating Supply</p>
+          <p class="text-lg font-semibold">
+            {{ coin.market_data.circulating_supply }}
+            {{ coin.symbol.toUpperCase() }}
+          </p>
+        </div>
+      </div>
+      <div class="mt-6">
+        <h2 class="text-lg font-bold mb-2">7-Day Price Trend</h2>
+        <div class="bg-gray-100 rounded-lg p-4">
+          <app-line-chart
+            [sparklineData]="coin.market_data.sparkline_7d.price"
+          ></app-line-chart>
+        </div>
+      </div>
     </div>
-  }
+  </div>
 }
