--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -2,7 +2,7 @@
   padding: 3px 5px;
   background-color: #4caf50;
   color: white;
-  font-weight: bold;
+  font-weight: medium;
   border-radius: 8px;
   animation:
     pulse 1s,
