--- a/src/app/shared/sparkline-chart/sparkline-chart.component.html
+++ b/src/app/shared/sparkline-chart/sparkline-chart.component.html
@@ -3,8 +3,8 @@
   [series]="chartOptions.series!"
   [chart]="{
     type: 'line',
-    width: 100,
-    height: 35,
+    width,
+    height,
     sparkline: {
       enabled: true,
     },
