--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 @if (authService.isLoggedIn()) {
   <app-header></app-header>
+  <app-offline-banner></app-offline-banner>
 }
+
 <router-outlet></router-outlet>
